// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditConfigFamilyDialog component tests should render dialog 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.c28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.c34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c38 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c31 {
  margin-left: -5px;
}

.c31>* {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c31>* {
  margin-left: 5px;
}

.c30 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c35 {
  cursor: pointer;
}

.c36 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c36 * {
  height: inherit;
  width: inherit;
}

.c13 {
  margin: 10px 0px;
  padding-bottom: 1px;
  border-bottom: 2px solid #e5e5e5;
  position: relative;
}

.c14 {
  margin: 0 0 1px 0;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c17 {
  word-break: break-all;
  min-width: 100px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 10% auto;
  border: 0;
  outline: 0;
  width: 800px;
  height: px;
}

.c0 {
  position: fixed;
  font-family: Trebuchet MS,Tahoma,Verdana,Arial,sans-serif;
  font-size: 1.1em;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: 0;
  background: rgba(102, 102, 102, 0.5);
  z-index: 600;
  -webkit-transition: opacity 1s ease-in;
  transition: opacity 1s ease-in;
  width: 100%;
  height: 100%;
}

.c45 {
  width: 0;
  height: 0;
  cursor: nwse-resize;
  border-right: 20px solid transparent;
  border-bottom: 20px solid transparent;
  border-top: 20px solid #fff;
}

.c44 {
  position: absolute;
  bottom: 3px;
  right: 3px;
  width: 20px;
  height: 20px;
  background: repeating-linear-gradient(     -45deg,     transparent,     transparent 2px,     #000 2px,     #000 3px   );
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: inherit;
  padding: 0;
  background: #fff;
  box-shadow: 5px 5px 10px #7F7F7F;
  border-radius: 3px;
  border: 1px solid #7F7F7F;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  font-size: 12px;
  font-family: Verdana,sans-serif;
  color: #074320;
  cursor: pointer;
  border-radius: 2px;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c5 :hover {
  border: 1px solid #074320;
}

.c6 {
  height: 24px;
  width: 24px;
  line-height: 24px;
}

.c6 * {
  height: inherit;
  width: inherit;
}

.c41 {
  display: inline-block;
  padding: 0 15px;
  color: #4C4C4C;
  text-align: center;
  vertical-align: middle;
  font-size: 11px;
  font-weight: bold;
  line-height: 30px;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  background-color: #fff;
  border-radius: 2px;
  border: 1px solid #bfbfbf;
  cursor: pointer;
  overflow: visible;
  z-index: 1;
}

.c41:focus,
.c41:hover {
  border: 1px solid #4C4C4C;
}

.c41:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #11ab51;
  font-weight: bold;
  color: #fff;
}

.c41[disabled] {
  cursor: not-allowed;
  opacity: 0.65;
  box-shadow: none;
}

.c41 img {
  height: 32px;
  width: 32px;
  margin-top: 5px 10px 5px -10px;
  vertical-align: middle;
}

.c41:link {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4C4C4C;
}

.c42 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c43 {
  border: 1px solid #7F7F7F;
  color: #fff;
  background: #11ab51;
}

.c43 :hover {
  color: #074320;
  background: #A1DDBA;
}

.c39 {
  border-width: 1px 0 0 0;
  border-style: solid;
  border-color: #e5e5e5;
  margin-top: 15px;
  padding: 10px 20px 10px 20px;
}

.c40 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.c4 {
  padding: 5px 5px 5px 10px;
  margin-bottom: 15px;
  border-radius: 2px 2px 0 0;
  border-bottom: 1px solid #7F7F7F;
  color: #fff;
  font-weight: bold;
  background: #11ab51;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: -webkit-grab;
  cursor: grab;
}

.c9 {
  overflow: auto;
  padding: 0 15px;
  width: 100%;
  height: 100%;
  max-height: 400px;
}

.c8 {
  overflow: hidden;
  height: 100%;
}

.c11 {
  border: 0;
  border-spacing: 0px;
  font-size: 12px;
  text-align: left;
  table-layout: auto;
}

.c18 {
  border: 0;
  border-spacing: 0px;
  font-size: 12px;
  text-align: left;
  table-layout: auto;
  width: 100%;
}

.c19 th,
.c19 td {
  padding: 4px 10px;
  border-bottom: 1px solid #e5e5e5;
}

.c19 tfoot tr {
  background: #fff;
}

.c19 tfoot tr td {
  border-bottom: 1px solid #e5e5e5;
}

.c20 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #000;
}

.c20 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #000;
}

.c22 {
  cursor: pointer;
}

.c21 {
  background-color: #fff;
  color: #000;
  border-top: 1px solid #e5e5e5;
  font-weight: bold;
}

.c29 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: normal;
  cursor: pointer;
}

.c32 {
  font-family: inherit;
  font-size: inherit;
  padding: 0;
  margin: 0;
  margin-left: 10px;
  line-height: normal;
  width: auto;
  height: auto;
}

.c33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c25 {
  height: 13px;
  box-sizing: content-box;
  display: inline-block;
  width: 100px;
  background: #4C4C4C;
  vertical-align: middle;
  text-align: center;
}

.c27 {
  z-index: 1;
  font-weight: bold;
  color: #fff;
  font-size: 9px;
  margin: 0;
  position: relative;
  top: -13px;
  padding-top: 1px;
}

.c26 {
  height: 13px;
  width: 10%;
  background: #4f91c7;
}

.c37 {
  height: 13px;
  width: 100%;
  background: #c83814;
}

@media print {
  .c35 {
    display: none;
  }
}

@media print {
  .c11 {
    border-collapse: collapse;
  }
}

@media print {
  .c18 {
    border-collapse: collapse;
  }
}

@media screen {
  .c19>tbody:nth-of-type(even),
  .c19>tbody:only-of-type>tr:nth-of-type(even) {
    background: #f3f3f3;
  }

  .c19>tbody:not(:only-of-type):hover,
  .c19>tbody:only-of-type>tr:hover {
    background: #e5e5e5;
  }
}

@media print {
  .c20 {
    border-bottom: 1px solid black;
  }

  .c20 a,
  .c20 a:hover {
    -webkit-text-decoration: none;
    text-decoration: none;
    color: #000;
  }
}

@media print {
  .c21 {
    color: #000;
    font-size: 1.2em;
    background-color: transparent;
    font-weight: bold;
  }
}

@media print {
  .c25 {
    background: none;
    border: 0;
  }
}

@media print {
  .c27 {
    color: black;
  }
}

@media print {
  .c26 {
    background: none;
  }
}

@media print {
  .c37 {
    background: none;
  }
}

<body>
  <div
    id="portals"
  >
    <div>
      <div
        class="c0"
      >
        <div
          class="c1"
          height="px"
          role="dialog"
          tabindex="1"
          width="800px"
        >
          <div
            class="c2"
          >
            <div
              class="c3 c4"
              data-testid="dialog-title-bar"
            >
              <span>
                Foo title
              </span>
              <div
                class="c5 c6"
                data-testid="dialog-title-close-button"
                title="Close"
              >
                ×
              </div>
            </div>
            <div
              class="c7 c8"
            >
              <div
                class="c9"
                data-testid="save-dialog-content"
              >
                <div
                  class="c10"
                >
                  <table
                    class="c11"
                  >
                    <tbody
                      class=""
                    >
                      <tr>
                        <td>
                          <div
                            class="c10"
                          >
                            Config
                          </div>
                        </td>
                        <td>
                          <div
                            class="c10"
                          >
                            foo
                          </div>
                        </td>
                      </tr>
                      <tr>
                        <td>
                          <div
                            class="c10"
                          >
                            Family
                          </div>
                        </td>
                        <td>
                          <div
                            class="c10"
                          >
                            family
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                  <section>
                    <div
                      class="c12 c13 section-header"
                    >
                      <h2
                        class="c14 c15"
                      >
                        <div
                          class="c16 c17"
                        >
                          Edit Network Vulnerability Tests
                        </div>
                      </h2>
                      <div
                        class="c3"
                      />
                    </div>
                    <table
                      class="c18 c19"
                    >
                      <thead
                        class="c20"
                      >
                        <tr>
                          <th
                            class="c21"
                          >
                            <a
                              class="c22"
                            >
                              <div
                                class="c23"
                              >
                                Name
                                <span
                                  title="Sorted In Ascending Order By Name"
                                >
                                   ▲
                                </span>
                              </div>
                            </a>
                          </th>
                          <th
                            class="c21"
                          >
                            <a
                              class="c22"
                            >
                              <div
                                class="c23"
                              >
                                OID
                              </div>
                            </a>
                          </th>
                          <th
                            class="c21"
                          >
                            <a
                              class="c22"
                            >
                              <div
                                class="c23"
                              >
                                Severity
                              </div>
                            </a>
                          </th>
                          <th
                            class="c21"
                          >
                            <a
                              class="c22"
                            >
                              <div
                                class="c23"
                              >
                                Timeout
                              </div>
                            </a>
                          </th>
                          <th
                            class="c21"
                          >
                            <div
                              class="c23"
                            >
                              Prefs
                            </div>
                          </th>
                          <th
                            class="c21"
                          >
                            <a
                              class="c22"
                            >
                              <div
                                class="c24"
                              >
                                Selected
                              </div>
                            </a>
                          </th>
                          <th
                            class="c21"
                          >
                            <div
                              class="c24"
                            >
                              Actions
                            </div>
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class=""
                      >
                        <tr>
                          <td>
                            <div
                              class="c10"
                            >
                              nvt
                            </div>
                          </td>
                          <td>
                            <div
                              class="c10"
                            >
                              1234
                            </div>
                          </td>
                          <td>
                            <div
                              class="c10"
                            >
                              <div
                                class="c25"
                                data-testid="progressbar-box"
                                title="Low"
                              >
                                <div
                                  background="low"
                                  class="c26"
                                  data-testid="progress"
                                />
                                <div
                                  class="c27"
                                >
                                  1.0 (Low)
                                </div>
                              </div>
                            </div>
                          </td>
                          <td>
                            <div
                              class="c10"
                            >
                              default
                            </div>
                          </td>
                          <td>
                            <div
                              class="c10"
                            >
                              3
                            </div>
                          </td>
                          <td>
                            <div
                              class="c28"
                            >
                              <div>
                                <label
                                  class="c29"
                                >
                                  <div
                                    class="c23 c30"
                                  >
                                    <div
                                      class="c23 c31"
                                    >
                                      <input
                                        class="c32 c33"
                                        name="1234"
                                        type="checkbox"
                                      />
                                    </div>
                                  </div>
                                </label>
                              </div>
                            </div>
                          </td>
                          <td>
                            <div
                              class="c34"
                            >
                              <span
                                class="c35 c36"
                                data-testid="svg-icon"
                                title="Select and edit NVT details"
                              >
                                <svg
                                  title="Select and edit NVT details"
                                >
                                  edit.svg
                                </svg>
                              </span>
                            </div>
                          </td>
                        </tr>
                        <tr>
                          <td>
                            <div
                              class="c10"
                            >
                              nvt2
                            </div>
                          </td>
                          <td>
                            <div
                              class="c10"
                            >
                              5678
                            </div>
                          </td>
                          <td>
                            <div
                              class="c10"
                            >
                              <div
                                class="c25"
                                data-testid="progressbar-box"
                                title="High"
                              >
                                <div
                                  background="error"
                                  class="c37"
                                  data-testid="progress"
                                />
                                <div
                                  class="c27"
                                >
                                  10.0 (High)
                                </div>
                              </div>
                            </div>
                          </td>
                          <td>
                            <div
                              class="c10"
                            >
                              1
                            </div>
                          </td>
                          <td>
                            <div
                              class="c10"
                            >
                              4
                            </div>
                          </td>
                          <td>
                            <div
                              class="c28"
                            >
                              <div>
                                <label
                                  class="c29"
                                >
                                  <div
                                    class="c23 c30"
                                  >
                                    <div
                                      class="c23 c31"
                                    >
                                      <input
                                        class="c32 c33"
                                        name="5678"
                                        type="checkbox"
                                      />
                                    </div>
                                  </div>
                                </label>
                              </div>
                            </div>
                          </td>
                          <td>
                            <div
                              class="c34"
                            >
                              <span
                                class="c35 c36"
                                data-testid="svg-icon"
                                title="Select and edit NVT details"
                              >
                                <svg
                                  title="Select and edit NVT details"
                                >
                                  edit.svg
                                </svg>
                              </span>
                            </div>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </section>
                </div>
              </div>
            </div>
            <div
              class="c38 c39 c40"
            >
              <button
                class="c41 c42 c43"
                data-testid="dialog-close-button"
                title="Cancel"
              >
                Cancel
              </button>
              <button
                class="c41 c42 c43"
                data-testid="dialog-save-button"
                title="Save"
              >
                Save
              </button>
            </div>
          </div>
          <div
            class="c44"
          >
            <div
              class="c45"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
</body>
`;

exports[`EditConfigFamilyDialog component tests should render loading indicator 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  width: 80px;
  height: 80px;
  margin: 40px auto;
  background-image: url(greenbone.svg);
  -webkit-background-size: 90%;
  background-size: 90%;
  -webkit-background-position: center;
  background-position: center;
  background-repeat: no-repeat;
  -webkit-animation: hGzRiT 2s infinite ease-in-out;
  animation: hGzRiT 2s infinite ease-in-out;
}

.c11 {
  width: 100%;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 10% auto;
  border: 0;
  outline: 0;
  width: 800px;
  height: px;
}

.c0 {
  position: fixed;
  font-family: Trebuchet MS,Tahoma,Verdana,Arial,sans-serif;
  font-size: 1.1em;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: 0;
  background: rgba(102, 102, 102, 0.5);
  z-index: 600;
  -webkit-transition: opacity 1s ease-in;
  transition: opacity 1s ease-in;
  width: 100%;
  height: 100%;
}

.c20 {
  width: 0;
  height: 0;
  cursor: nwse-resize;
  border-right: 20px solid transparent;
  border-bottom: 20px solid transparent;
  border-top: 20px solid #fff;
}

.c19 {
  position: absolute;
  bottom: 3px;
  right: 3px;
  width: 20px;
  height: 20px;
  background: repeating-linear-gradient(     -45deg,     transparent,     transparent 2px,     #000 2px,     #000 3px   );
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: inherit;
  padding: 0;
  background: #fff;
  box-shadow: 5px 5px 10px #7F7F7F;
  border-radius: 3px;
  border: 1px solid #7F7F7F;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  font-size: 12px;
  font-family: Verdana,sans-serif;
  color: #074320;
  cursor: pointer;
  border-radius: 2px;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c5 :hover {
  border: 1px solid #074320;
}

.c6 {
  height: 24px;
  width: 24px;
  line-height: 24px;
}

.c6 * {
  height: inherit;
  width: inherit;
}

.c16 {
  display: inline-block;
  padding: 0 15px;
  color: #4C4C4C;
  text-align: center;
  vertical-align: middle;
  font-size: 11px;
  font-weight: bold;
  line-height: 30px;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  background-color: #fff;
  border-radius: 2px;
  border: 1px solid #bfbfbf;
  cursor: pointer;
  overflow: visible;
  z-index: 1;
}

.c16:focus,
.c16:hover {
  border: 1px solid #4C4C4C;
}

.c16:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #11ab51;
  font-weight: bold;
  color: #fff;
}

.c16[disabled] {
  cursor: not-allowed;
  opacity: 0.65;
  box-shadow: none;
}

.c16 img {
  height: 32px;
  width: 32px;
  margin-top: 5px 10px 5px -10px;
  vertical-align: middle;
}

.c16:link {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4C4C4C;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c18 {
  border: 1px solid #7F7F7F;
  color: #fff;
  background: #11ab51;
}

.c18 :hover {
  color: #074320;
  background: #A1DDBA;
}

.c14 {
  border-width: 1px 0 0 0;
  border-style: solid;
  border-color: #e5e5e5;
  margin-top: 15px;
  padding: 10px 20px 10px 20px;
}

.c15 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.c4 {
  padding: 5px 5px 5px 10px;
  margin-bottom: 15px;
  border-radius: 2px 2px 0 0;
  border-bottom: 1px solid #7F7F7F;
  color: #fff;
  font-weight: bold;
  background: #11ab51;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: -webkit-grab;
  cursor: grab;
}

.c9 {
  overflow: auto;
  padding: 0 15px;
  width: 100%;
  height: 100%;
  max-height: 400px;
}

.c8 {
  overflow: hidden;
  height: 100%;
}

<body>
  <div
    id="portals"
  >
    <div>
      <div
        class="c0"
      >
        <div
          class="c1"
          height="px"
          role="dialog"
          tabindex="1"
          width="800px"
        >
          <div
            class="c2"
          >
            <div
              class="c3 c4"
              data-testid="dialog-title-bar"
            >
              <span>
                Foo title
              </span>
              <div
                class="c5 c6"
                data-testid="dialog-title-close-button"
                title="Close"
              >
                ×
              </div>
            </div>
            <div
              class="c7 c8"
            >
              <div
                class="c9"
                data-testid="save-dialog-content"
              >
                <div
                  class="c10 c11"
                  data-testid="loading"
                >
                  <div
                    class="c12"
                  />
                </div>
              </div>
            </div>
            <div
              class="c13 c14 c15"
            >
              <button
                class="c16 c17 c18"
                data-testid="dialog-close-button"
                title="Cancel"
              >
                Cancel
              </button>
              <button
                class="c16 c17 c18"
                data-testid="dialog-save-button"
                title="Save"
              >
                Save
              </button>
            </div>
          </div>
          <div
            class="c19"
          >
            <div
              class="c20"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
</body>
`;
